[ADD] Toast Service

--- a/libs/core/stylesheets/src/lib/styles/core.scss
+++ b/libs/core/stylesheets/src/lib/styles/core.scss
@@ -20,7 +20,7 @@
 @import "../partials/plugins/@angular/material/index";
 
 // Components
-// @import "../components/snackbar";
+@import "../components/snackbar";
 
 :root {
     @include mat.all-component-themes($knowify-theme-light);
