--- a/libs/shared/feature-stepper/src/lib/steps/wizard-reservations/step-3-confirm/confirm.component.html
+++ b/libs/shared/feature-stepper/src/lib/steps/wizard-reservations/step-3-confirm/confirm.component.html
@@ -35,5 +35,7 @@
   </div>
 </div>
 <div class="flex items-center mt-2 gap-2 p-5">
-  <button mat-raised-button color="primary">Cancel reservation</button>
+  <button mat-raised-button color="primary" (click)="cancelReservation()">
+    Cancel reservation
+  </button>
 </div>
